--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
-.App {
+body {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  min-width: 580px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  font-size:4rem;
 }
 
 .App-header {
@@ -24,15 +26,170 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#input{
+  height:auto;
+  font-size:1.3rem;
+  border-radius: 5px;;
+  padding:5px 10px 5px 25px;
+  margin:50px;
+  background-color: transparent;
+  border:2px solid #008CBA;
+  color:white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#add, #save{
+  padding: 10px 12px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor:pointer;
+  transition-duration: 0.4s;
+  background-color: transparent;
+  color: white;
+  border: 2px solid #008CBA; /* Blue */
+
+}
+#add:hover{
+  background-color: #008CBA; /* Blue */
+  color: white;
+}
+
+li{
+  width:100%;
+  border:1px solid #008CBA ;
+  text-align: start;
+  margin:10px;
+  padding:10px;
+  border-radius: 8px;
+
+}
+li button{
+  float: right;
+}
+
+#edit{
+  padding: 10px 12px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor:pointer;
+  transition-duration: 0.4s;
+  background-color: transparent;
+  color: white;
+  border: 2px solid #4CAF50; /* Green */
+}
+#edit:hover{
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
+
+
+#delete{
+  color: white;
+  padding: 10px 12px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor:pointer;
+  transition-duration: 0.4s;
+  background-color: transparent;
+  color: white;
+  border: 2px solid #f44336; /* Red */
+
+}
+#delete:hover{
+  background-color: #f44336; /* Red */
+  color: white;
+}
+
+li input{
+  height:auto;
+  font-size:1.3rem;
+  border-radius: 5px;;
+  margin:30px 30px;
+  background-color: transparent;
+  border:1px solid #008CBA;
+  padding:10px;
+  color:white;
+}
+
+ul{
+  padding:10px;
+  margin:20px;
+}
+
+/* W3 CHECKBOX */
+
+/* The container */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container #checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
